<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonpf.configuracaopersonagem.PersonagemActivity">

    <RelativeLayout
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!---->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_titulo"
            android:textColor="#666"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/cabecalho"
        android:layout_above="@id/rodape"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo" />

            <RadioGroup
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/rbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_masculino"/>

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_feminino"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_classe"/>

            <Spinner
                android:id="@+id/spClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/classes"/>

            <ImageView
                android:id="@+id/ivClasse"
                android:src="@drawable/anao"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_forca"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/tvForca"
                android:gravity="right"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                andoird:max="10"
                android:id="@+id/sbForca"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_criar"
                android:id="@+id/btCriar"/>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_rodape" />
    </RelativeLayout>
</RelativeLayout>